# advanced-flex-server

./: .cppCheck.suppressions  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  build.sh  conanfile.py  conanfile.txt  install-dependencies.sh
cfg/: dumb.cert  dumb.dh  dumb.key  settings.json
src/c++/systemicai/cmd/: httpd.cpp
src/c++/systemicai/common/: certificate.h  exception.h
src/c++/systemicai/http/client/: api.hpp  settings.h
src/c++/systemicai/http/server/: functions.cpp  functions.h  handler.hpp  handlers.hpp  namespace.h  queue.hpp  server.cpp  server.h  server.hpp  service.hpp  sessions.hpp  settings.h
src/c++/systemicai/http/server/handlers/: default.hpp  handler.hpp  registry.hpp
tst/c++/systemicai/: unit_tests.cpp
tst/c++/systemicai/http/client/: api.cpp  simple_client.hpp  ssl_client.hpp
tst/c++/systemicai/http/server/: server.cpp  server_test.cpp  server_test.hpp  settings_test.cpp  settings_test.hpp
